# lcr_code

./: AI_ASR_LLM_TTS.py
C/: 0.0.cpp  2022超市计费系统1.1.cpp  2022超市计费系统1.2.cpp  2022超市计费系统1.3.cpp  4.cpp  6.cpp  99乘法表.cpp  99乘法表while.cpp  CF.cpp  CodeBlocks.lnk  DP.cpp  HUY1.cpp  Test of Love.cpp  a1.cpp  c++测试.cpp  cs.cpp  dabiao.cpp  gmon.out  huyue.cpp  icpc.cpp  in.txt  lqb.cpp  lqb2.cpp  out.txt  sb输入排序.cpp  sb输入排序（选择）.cpp  test1.cpp  vp.cpp  三位数各位和.cpp  三角形面积.cpp  买鸡.cpp  二分查找.cpp  二叉树递归.cpp  二叉树非递归.cpp  传球游戏.cpp  倒序输出字符.cpp  兔子繁殖.cpp  冒泡排序.cpp  冒泡索引.cpp  判断一元二次方程的根数.cpp  (+75 more)
Hello_Agent/: test_install.py
Hello_Agent/Tool/: doubao.py
java/: CourseManagementGUI.java  CourseManagementSystem.java  CourseManager.java  CourseSearchApp.java  CoursedeleteApp.java  LoginPage.java  MainApplication.java  System1.java
scxs/: README.md
scxs/doc/01.需求说明书/: 生命特征监测仪需求说明书.docx  生命监测仪_项目进度表_计划书1.xlsx
scxs/doc/02.设计说明书/: Story列表0414.xlsx  全量Story列表.xlsx  北向stroy拆分.docx  南向story拆分.docx  物料请购单-v1.xlsx  生命特征监测仪_需求设计说明书.docx
scxs/doc/04.问题列表/: 测试用例.docx
scxs/doc/05.会议记录/: 第6组会议记录-4月18日.docx  第6组会议记录.docx  第6组会议记录——4月15日.docx
scxs/doc/07.文档模板/: Story设计说明书_v1.1.dotx  周报_模板-v1.1.dotm  实训成绩考核表-v1.0.xltx  实训考勤表-v1.0.xlsx  签收记录_模板-v1.1.xltx  迭代开发计划_模板-v1.1.xltx  (+3 more)
scxs/src/SouthVitalSignsMonitor/BioMonitor/: BUILD.gn  bio_monitor_example.c
scxs/src/SouthVitalSignsMonitor/BioMonitor/include/: blood_pressure.h  heart_rate.h  max30102.h  spo2_algorithm.h  temperature.h
scxs/src/SouthVitalSignsMonitor/BioMonitor/src/: blood_pressure.c  heart_rate.c  max30102.c  spo2_algorithm.c  temperature.c
(+78 files in other folders)
