# Copyright (c) 2024 iSoftStone Education Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("bio_monitor_example") {
    sources = [
        "max30102_example.c",
        "src/heart_rate.c",
        "src/max30102.c",
        "src/spo2_algorithm.c",
        "src/blood_pressure.c",
        "src/temperature.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//drivers/framework/include/osal",
        "//drivers/framework/include/utils",
        "//drivers/adapter/uhdf/posix/include",
        "//drivers/adapter/uhdf2/osal/include",
        "//drivers/adapter/khdf/liteos/osal/include",
        "//drivers/adapter/khdf/liteos_m/osal/include",
        "include",
        "//third_party/cJSON",
        "//third_party/lwip/src/include/lwip"
    ]

    deps = [
        "//device/rockchip/hardware:hardware",
        "//kernel/liteos_m/kal/posix"
    ]
}
